# nox

./: .gitignore  Cargo.toml  LICENSE  README.adoc  languageDesign  languageDesign.adoc
src/: ast.rs  env.rs  error.rs  gen.rs  lexer.rs  lib.rs  main.rs  parser.rs  position.rs  semant.rs  symbol.rs  symbols.rs  tast.rs  temp.rs  terminal.rs  token.rs  types.rs
src/semant/: msg.rs
tests/: 1_main.nx  array.nx  array.stdout  array_assignment.nx  comments.nx  comments.tig  conditions.nx  conditions.stdout  escapes.nx  escapes.tig  extern.nx  functions.nx  functions.tig  hello.nx  hello1.nx  hello1.tig  hello2.nx  hello2.tig  hello3.nx  hello5.nx  integers.nx  integers.stdout  lib.nx  loops.nx  merge.nx  nested.nx  prettyprint.nx  queens.nx  record.nx  spill.nx  strings.nx  strings.stdout  struct.nx  test.rs  vars.nx  vars.tig
tests/error/: array.nx  array.stderr  function.nx  function.stderr  hello2-1.nx  hello4.nx  main_var.nx  multiple_main.nx  multiple_main.stderr  no_main.nx  no_main.stderr  struct_index.nx  types.nx  types.stderr  unclosed_comment.stderr  unclosed_string.nx  unclosed_string.stderr
