[package]
name = "nox"
version = "0.1.0"
authors = ["Antoni Boucher <bouanto@zoho.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlvm = { git = "ssh://git@framagit.org:/antoyo/rlvm.git" } # "0.0.2"

[lib]
name = "runtime"
crate-type = ["staticlib"]
