[package]
name = "nox"
version = "0.1.0"
authors = ["Antoni Boucher <bouanto@zoho.com>"]

[dependencies]
#rlvm = { git = "ssh://git@framagit.org:/antoyo/rlvm.git" } # "0.0.2"
rlvm = { path = "/home/bouanto/Ordinateur/Programmation/Rust/Projets/rlvm" }

[lib]
name = "runtime"
crate-type = ["staticlib"]
